public/css/ui/grid.less
.grid {
  z-index: 0;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  background-color: @color-black;
  opacity: 0;
  visibility: hidden;

  &.active {
    z-index: 1;
    opacity: 1;
    visibility: visible;
  }

  .gm-scrollbar.-vertical .thumb {
    background-color: rgba(255,255,255,.3);
  }
}

.grid__inner {
  overflow: auto;
}

.grid__bg-image {
  z-index: -1;
  top: 0;
  left: 0;
  background-image: url('/img/grid/bg-image.jpg');
  opacity: .15;
}

.grid__list {
  padding: 16.6rem 0 8.3rem;
}

.grid__item {
  width: 21vw;
  height: 21vh;
  position: relative;
  border: 2px solid transparent;

  &:hover {
    .grid__item-cover {opacity: 1}
    .grid__item-cover-img {opacity: .1}
  }
}

.grid__item-title-wrapper {
  position: absolute;
  left: 1.667rem;
  right: 1.667rem;
  bottom: 1.667rem;
}

.grid__item-index {
  font-size: 2.667rem;
  line-height: 1.1em;
  color: @color-white;
  opacity: .5;
}

.grid__item-title {
  font-size: 1.833rem;
  line-height: 1.1em;
  color: @color-white;
}

.grid__item-cover {
  height: 100%;
  cursor: pointer;
  opacity: .75;
  transition: opacity 200ms ease;
}

.grid__item-cover-img {
  position: relative;
  opacity: .08;
}

.grid__footer {
  color: @color-neutral-light;
}

.grid__footer-list {
  font-size: 0;
}

.grid__footer-list-item {
  font-size: 1.2rem;
}

.grid__footer-list-item::after {
  content: '•';
  color: @color-neutral-dark;
  font-weight: bold;
  padding: 0 1.667rem;
}

.grid__footer-list-item.last::after {
  content: '';
  padding: 0;
}

@media all and (max-width: 730px) {
  .grid__item-title-wrapper {
    top: 1.667rem;
  }

  .grid__item-title {
    position: absolute;
    bottom: -1.667rem;
    left: 0;
    transform-origin: 0 0;
    transform: rotateZ(-90deg);
  }
}

